
- Stop using a custom KarlSecurityPolicy; this policy was identical to
  the WhoInheritingACLSecurityPolicy in repoze.bfg 0.8+.  Use that one
  instead.

- LP #388096: Made a link to the community delete operation.

- LP #391247: Moved console scripts from the osi package to the karl
  package.  Also added karl/scripting.py and renamed osi.ini to karl.ini.

3.2 (2009-06-24)
----------------

- LP #387974:  Made 'edit_acl.html' view reindex context in the 'allowed'
  index, as well as invalidating any cached catalog queries.

- Added a simpler people directory implementation to the KARL core.

- For text index converters that use external programs, added a timeout thread
  to kill hanging processes.  Process is considered hanging after 5 seconds.
  This is to work around an error in wvConvert such that it will hang
  indefinitely for certain inputs.


3.1 (2009-06-16)
----------------

- LP #387390:  Add / enable delete profile view, deleting the corresponding
  user as well.

- LP #336714:  Added optional 'reason' argument to 'logout_view', to enable
  overriding the header value passed explaining why the user landed on the
  login form.  Use this argument when returning the logout response from
  another view.

- LP #385580:  Have the "Back to Parent" link not be full width on the <a>.

- LP #385268:  Email index is converted to lower case to facilitate case
  insensitive search.

- LP #385636: Better handling of existing users in invite new users form.


3.0 (2009-06-15)
----------------

- LP #384096: Intersect text index search results last for advanced search,
  improving relevance ranking.

- Micro-speedups for "communities" page.

- LP 386110:

  o Filter items in showtag view according to view permission of
    authenticated user.

  o Consolidated three showtag views to use same code.

  o Fix double slashes in profile view.

  o Make sure new user profiles get initialized with __acl__.


osi-production-20090611 (2009-06-11)